# turbosqueeze

./: CMakeLists.txt  LICENSE  README.md  libturbosqueeze.h  platform.h  tsq_common.h  tsq_context.cpp  tsq_context.h  tsq_decode.cpp  tsq_decode.h  tsq_encode.cpp  tsq_encode.h  tsq_threads.cpp  turbosqueeze.cpp  turbosqueeze.h  turbosqueeze_api.cpp  turbosqueeze_context.cpp  turbosqueeze_context.h  turbosqueeze_decoder.cpp  turbosqueeze_decoder_avx2.cpp  turbosqueeze_dict.cpp  turbosqueeze_encoder.cpp
sample/: CMakeLists.txt  main.cpp  tsq.cpp  turbosqueeze.cpp
test/: CMakeLists.txt  test.cpp
